# rustification

./: .gitignore  .python-version  create_profiles.sh  nnids.json  testdata.json
profiles/: all_rust.prof  pure_python.prof  rust_mod_11.prof  rust_mod_11_and_date.prof
python/: all_rust.py  main.py  pure_python.py  rust_mod11.py  rust_mod_and_date.py
rs_nnid_tools/: Cargo.toml  pyproject.toml
rs_nnid_tools/src/: lib.rs
