[package]
name = "rs_nnid_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_nnid_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pyo3-log = "0.8.3"
log = "0.4.20"
chrono = "0.4"
